*gitlab-ce-10.4.5 (09 Mar 2018)

  09 Mar 2018; Manuel Friedli <manuel@fritteli.ch> +gitlab-ce-10.4.5.ebuild,
  -gitlab-ce-10.4.4.ebuild:
  www-apps/gitlab-ce:  v10.4.4 -> v10.4.5

  08 Mar 2018; Manuel Friedli <manuel@fritteli.ch>
  -files/03-gitlab-ce-8.17.0-database.yml.patch,
  -files/03-gitlab-ce-9.2.2-database.yml.patch,
  -files/04-gitlab-ce-8.12.7-fix-check-task.patch,
  -files/gitlab-8.13.3-sidekiq.init, -files/gitlab-8.13.3-unicorn.init,
  -gitlab-ce-10.0.0_rc3.ebuild, -gitlab-ce-10.0.4.ebuild,
  -gitlab-ce-9.0.13.ebuild, -gitlab-ce-9.1.10.ebuild, -gitlab-ce-9.2.10.ebuild,
  -gitlab-ce-9.3.11.ebuild, -gitlab-ce-9.4.7.ebuild, -gitlab-ce-9999.ebuild,
  metadata.xml:
  www-apps/gitlab-ce:  Purge all versions depending on <libgit2:0/26

*gitlab-ce-10.4.4 (19 Feb 2018)

  19 Feb 2018; Manuel Friedli <manuel@fritteli.ch>
  +files/08-gitlab-ce-10.4.4-general-config.patch,
  +files/gitlab-10.4.4-sidekiq.init, +files/gitlab-10.4.4-unicorn.init,
  +gitlab-ce-10.4.4.ebuild:
  www-apps/gitlab-ce: Add ebuild for version 10.4.4.

*gitlab-ce-10.3.7 (17 Feb 2018)

  17 Feb 2018; Manuel Friedli <manuel@fritteli.ch> +gitlab-ce-10.3.7.ebuild:
  www-apps/gitlab-ce:  Add ebuild for version 10.3.7.

*gitlab-ce-10.2.8 (16 Feb 2018)

  16 Feb 2018; Manuel Friedli <manuel@fritteli.ch>
  +files/03-gitlab-ce-10.2.8-database.yml.patch, +gitlab-ce-10.2.8.ebuild:
  www-apps/gitlab-ce:  Add ebuild for version 10.2.8.

  08 Feb 2018; Manuel Friedli <manuel@fritteli.ch>
  +files/07-gitlab-ce-10.0.7-yarn.patch, gitlab-ce-10.0.7.ebuild:
  www-apps/gitlab-ce:  Add patch for package.json and yarn.lock in order to fix
  dependency errors that cause emerge --config gitlab-ce to fail

*gitlab-ce-9.5.10 (08 Feb 2018)

  08 Feb 2018; Manuel Friedli <manuel@fritteli.ch> +gitlab-ce-9.5.10.ebuild,
  -gitlab-ce-9.5.9.ebuild:
  www-apps/gitlab-ce:  Update 9.5.9.-> 9.5.10

*gitlab-ce-10.0.7 (08 Feb 2018)

  08 Feb 2018; Manuel Friedli <manuel@fritteli.ch> +gitlab-ce-10.0.7.ebuild: