@@ -26,6 +26,7 @@ EBUILD gitlab-ce-10.1.7.ebuild 13679 SHA256 9c1bec7e86d46422f87baecaece80197c506
 EBUILD gitlab-ce-10.2.8.ebuild 13681 SHA256 0e02e1a51f335872facce2751aa23d8ff5b9cd8aa7359fed1cd0f5a3ed5bd1e7 SHA512 805d6a717b0dcdc6551f549722abb8322a51d6cee1eb807dabac1fe4b98ffd32fcf3667d1de7f845a08e9dfb72afa257c51c6382cbc48f5f23fe15b027724dde WHIRLPOOL 1c48b8ea54d65d1d2ea001c6af45c0a76f0587d815353675ce36245c721f4b2d9c5b48c608fe632743863f5db859c5ee0c96b95fe6b429fcdd7053d4e8fb86e8
 EBUILD gitlab-ce-10.3.7.ebuild 14085 SHA256 cbff8442516b815e386974191d48464202b3b4f93e5d4688a71de08fadaeb89c SHA512 311e256f675c6cbb8e374448858e0adcfecd6a5432c4384a5d9c302a3c82dcab0aab0eb9a79d90f8f770dba0d1d984f0b7e3d53ce1e3b2c4c915aaa2facdbdd7 WHIRLPOOL 29674dc1a54311518047df70ecd21971b642bc7b8511d8c6ba3f754b7beae3de10c289704dcd214c7c5cf76f60772117c2649daac4d691b13387d758d2fb3f36
 EBUILD gitlab-ce-10.4.5.ebuild 13152 SHA256 69e512b9a7bad02d6d9b848c08f070914ab59c74444c93185bfc05ea08decf18 SHA512 ac8d91aa7b4e8bebc4fbca44d413ff7c8f9549d340de730341ee026328dc25220d6e34b31dac86383d48c8b6cc465eb01a0fb601e944c20966e2016adc7d0024 WHIRLPOOL 6f14b737b117cb43b8551fc5f5fcfb79910db8496ef60b26dff758ce669fc47d910c003222f595e0635c22c16a4d05df0b39d2628ea20f9a46a5bdc3039ebaea
+EBUILD gitlab-ce-10.5.4.ebuild 13151 SHA256 e1724882844511b0c8c08f5a107a3c2d07523fa4f8048db82054729da74a8b83 SHA512 f183a12556bd1725dee258c1cab48dae81d4b4b5a709c2500177baf948537875a488c826fbf779db76ef5692253ac7189d6d3f8e8b38082e821df7e68bb812ee WHIRLPOOL d30f3a3071adc297198f7ed762741e45bd0a8ba2d0a8e96ca8a6ab1d0f6311dfec81ac316730907e3c79a96a60b25f27c6f9379508d34e3f246e64781aa614e7
 EBUILD gitlab-ce-9.5.10.ebuild 13526 SHA256 6e7c361f31989dd608eff4c8dd01b7301b142b4d38acdf38e61e2eecb2d4b285 SHA512 e33e56c8e49bd2ef03dd9af508b186f7908b8502960cbdb95ca9166631b84d5357c4965c0919e432ee5de9b9eeb33f68773ac405c24430568f9abb0d8e7354a6 WHIRLPOOL 3e866d785e8018096a92a223a2f6cedf4398cc07726a183d805005b3cd718fed2296edd63f5bc9d2b8849fe2298e9a61bf998a2241de2cd5ab4527f8ddaed325
-MISC ChangeLog 27106 SHA256 957db66c97c8d5f5e346ede41e552bfc0eb410cca091c487278b500aa96c220f SHA512 006a5369989cb5bf71dbf637fb1ee8e00ebcd31429dc08583e6039070bdeb4260384f1910991f2a599a06acdd268d973b54173540ab69fe0fdc598a80e3943e4 WHIRLPOOL 8444b3ff899d10ffce2117b938e95224338d573074003cadf8eb0c71b837a8c810509008b80f59973583c455dadcde61388cd90e6f837269b5befab63ab750c3
+MISC ChangeLog 27270 SHA256 d4ee055a78ca09005d0d9ebe5a26c6dc210e5398b4508335154820da2b9a500d SHA512 25c80ba0e6269583cbc1d3815eff9faf2d0f58c566b9dd683ee87b6908f3ef9ece6834a0815da450d16c9ee22bf77d04e7a6b349e9e0aebef65e8f2c587e03e6 WHIRLPOOL 0dd92f0533ef0e5bdbc22cfc30acaf0501551c7ccf1b4aa34bacce4229fce3a1a7a55094c739b01c0f48d68a2b73e2f2944954f0b70f9a5e5ad1ce851c10fbd1
 MISC metadata.xml 665 SHA256 2a0cd67ad42f0cc6d8b88391cf6e3153a9883dab31aae8227c57c95f3f68890d SHA512 64b8fbae373d0a057f705f64c1d097dbfab893bd585e1db65ccdb06cda9569211c9b63fa168ac8de9f6d512a17759ecd20b54d818d2790a6f4c99d0ca73fddc3 WHIRLPOOL a81b21bb46aad9757a502628033eba546c686b83bbf1d651ecabba273c454cfb64574affc180db8358ced87eb638e8ad13d7c79c4cfb9a31e72c577d21ab433e
