@@ -1,3 +1,8 @@
+*gitlab-ce-10.5.4 (09 Mar 2018)
+
+  09 Mar 2018; Manuel Friedli <manuel@fritteli.ch> +gitlab-ce-10.5.4.ebuild:
+  www-apps/gitlab-ce:  Add ebuild for version 10.5.4
+
 *gitlab-ce-10.4.5 (09 Mar 2018)
 
   09 Mar 2018; Manuel Friedli <manuel@fritteli.ch> +gitlab-ce-10.4.5.ebuild,
